--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Weather</string>
+    <string name="main_error_server">Error con el servidor\n</string>
 </resources>
